# diggit

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.qwik-web  Dockerfile.web  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: docker-images.yml
apps/.create-qwik-1y7kxktek9v/: package.json
apps/api/: Cargo.toml
apps/api/migrations/: 20260530170000_init.sql  20260530193000_repository_stars_metadata.sql  20260601060400_federated_auth.sql  20260604090000_issues.sql  20260605050000_settings_redesign.sql  20260605054000_issue_labels.sql  20260605070000_repository_commit_authors.sql  20260609060000_gitlab_compat.sql  20260610083000_repository_webhook_branch_filters.sql  20260610112000_pr_comment_reactions.sql  20260610120000_comment_attachments.sql  20260611064000_pull_request_numeric_ids_and_activity_events.sql  20260611073000_releases.sql  20260611080000_release_reactions.sql  20260611081000_generic_reactions.sql  20260615090000_pull_request_legacy_uuid_nullable.sql  20260712143000_pull_request_label_assignments.sql
apps/api/src/: config.rs  error.rs  main.rs  models.rs  state.rs
apps/api/src/routes/: admin.rs  auth.rs  federation.rs  gitlab_compat.rs  health.rs  keys.rs  mod.rs  organizations.rs  repositories.rs  runners.rs  search.rs  social_preview.rs  users.rs
apps/api/src/services/: auth.rs  federation.rs  git.rs  gitlab_compat.rs  mod.rs  orgs.rs  repos.rs  runners.rs  search.rs  social_preview.rs  ssh.rs  ssh_server.rs  utils.rs
apps/qwik-web/: package.json  vite.config.ts
apps/qwik-web/src/: entry.preview.tsx  global.css  root.tsx
apps/qwik-web/src/lib/: api.ts  auth-session.ts  compat-proxy.ts  pull-request-flow.ts  repo-list-query.ts  repository-readme.ts  routes.ts  runtime-config.ts  server-auth.ts  theme.ts  user-profile.ts  username.ts
apps/qwik-web/src/routes/: index.tsx  layout.tsx
apps/web/: package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: AuthPanel.tsx  CodeDiff.test.tsx  CodeDiff.tsx  CodeFileViewer.test.tsx  CodeFileViewer.tsx  CollaboratorsPanel.tsx  ConversationPanel.tsx  CopyShaButton.tsx  DeleteOrganizationButton.tsx  DeleteRepositoryButton.tsx  Drawer.tsx  FileDeleteButton.tsx  FileEditor.tsx  (+43 more)
docs/: federation.md
(+181 files in other folders)
