[package]
name = "diggit-api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
bcrypt = "0.19.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
pulldown-cmark = "0.13.4"
rand = "0.10.1"
redis = { version = "1.2.2", features = ["tokio-comp"] }
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["json", "rustls"], default-features = false }
resvg = "0.47.0"
russh = "0.61.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.18"
tiny-skia = "0.12.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "process", "fs", "time"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["serde", "v4", "v7"] }
